Reduce gaps to stop fast breaks during animation

--- a/src/components/Skill/Skill.module.css
+++ b/src/components/Skill/Skill.module.css
@@ -357,7 +357,7 @@ section.bot {
 .frontSection,
 .backSection {
   display: flex;
-  gap: 4.45vmin;
+  gap: 3.9vmin;
   overflow: hidden;
   white-space: nowrap;
   position: relative;
@@ -381,7 +381,7 @@ section.bot {
 .frontSection > section,
 .backSection > section {
   display: flex;
-  gap: 4.45vmin;
+  gap: 3.9vmin;
   white-space: nowrap;
   padding: 5vmin 0;
 }
